--- a/Task 1/main/index.html
+++ b/Task 1/main/index.html
@@ -9,6 +9,7 @@
 
     <input type="number" value="1" id="index"></input>
     <button type="submit" onclick="displayData()">Submit</button>
+    <button id="button1">Clear</button>
     <br><br>
     <h3>The country details are: </h3>
     <br>
@@ -17,7 +18,7 @@
 <!--    
     <p id="demo"></p> 
 -->
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
